--- a/src/app/@theme/layouts/one-column/one-column.layout.html
+++ b/src/app/@theme/layouts/one-column/one-column.layout.html
@@ -1,9 +1,9 @@
-<div class="container" [class.is-mobile]="mobileQuery.matches">
+<div class="sidenav" [class.is-mobile]="mobileQuery.matches">
   <mat-toolbar color="primary" class="toolbar">
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="app-name">Responsive App</h1>
+    <h1 class="app-name">My Admin</h1>
   </mat-toolbar>
 
   <mat-sidenav-container
@@ -12,14 +12,28 @@
   >
     <mat-sidenav
       #snav
-      [mode]="mobileQuery.matches ? 'over' : 'side'"
+      opened
       [fixedInViewport]="mobileQuery.matches"
       fixedTopGap="56"
+      [mode]="mobileQuery.matches ? 'over' : 'side'"
     >
       <mat-nav-list>
-        <a mat-list-item routerLink="." *ngFor="let nav of fillerNav"
-          >{{nav}}</a
-        >
+        <mat-accordion multi>
+          <mat-expansion-panel *ngFor="let menu of menus">
+            <mat-expansion-panel-header>
+              <mat-panel-title> {{menu.title}}</mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <a
+              mat-list-item
+              routerLinkActive="is-active"
+              *ngFor="let child of menu.children"
+              [routerLink]="child.link"
+            >
+              {{child.title}}
+            </a>
+          </mat-expansion-panel>
+        </mat-accordion>
       </mat-nav-list>
     </mat-sidenav>
 
