--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@import '~ngx-toastr/toastr';
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 
