--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,6 +16,8 @@
   </mat-form-field>
   <div class="buttons">
     <button mat-raised-button color="primary">Login</button>
-    <button mat-button color="warn" routerLink="/auth/request-password">Forget Password</button>
+    <button mat-button color="warn" routerLink="/auth/request-password">
+      Forget Password
+    </button>
   </div>
 </form>
