--- a/src/app/@theme/layouts/one-column/one-column.layout.html
+++ b/src/app/@theme/layouts/one-column/one-column.layout.html
@@ -4,6 +4,15 @@
       <mat-icon>menu</mat-icon>
     </button>
     <h1 class="app-name">My Admin</h1>
+    <span class="flex-1"></span>
+    <button mat-raised-button id="avatar-named" [matMenuTriggerFor]="menu">
+      <span>{{user?.name}}</span>
+      <img [src]="user?.avatar" class="rounded-full w-8 h-8" />
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLink="/profile">Perfil</button>
+      <button mat-menu-item (click)="authService.logout()">Sair</button>
+    </mat-menu>
   </mat-toolbar>
 
   <mat-sidenav-container
