--- a/src/app/auth/request-password/request-password.component.html
+++ b/src/app/auth/request-password/request-password.component.html
@@ -1,11 +1,18 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<form [formGroup]="form">
   <h2>Request password</h2>
   <mat-form-field>
     <input matInput placeholder="Email" formControlName="email" required />
     <mat-error>{{ this.form.get('email')?.errors?.message }}</mat-error>
   </mat-form-field>
   <div class="buttons">
-    <button mat-raised-button color="primary">Request password</button>
-    <button mat-button routerLink="/auth/login">Go back</button>
+    <button
+      mat-raised-button
+      color="primary"
+      type="button"
+      (click)="onRequestPassword()"
+    >
+      Enviar senha
+    </button>
+    <button mat-button routerLink="/auth/login" type="button">Voltar</button>
   </div>
 </form>
