--- a/src/app/auth/request-password/request-password.component.html
+++ b/src/app/auth/request-password/request-password.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-  <h2>Request password</h2>
+  <h2>Esqueci minha senha</h2>
   <mat-form-field>
     <input matInput placeholder="Email" formControlName="email" required />
     <mat-error>{{ this.form.get('email')?.errors?.message }}</mat-error>
