--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,8 @@
 <form [formGroup]="form">
   <h2>Login</h2>
   <mat-form-field>
-    <input matInput placeholder="Email" formControlName="email" required />
-    <mat-error>{{ this.form.get('email')?.errors?.message }}</mat-error>
+    <input matInput placeholder="Login" formControlName="login" required />
+    <mat-error>{{ this.form.get('login')?.errors?.message }}</mat-error>
   </mat-form-field>
   <mat-form-field>
     <input
@@ -15,10 +15,15 @@
     <mat-error>{{ this.form.get('password')?.errors?.message }}</mat-error>
   </mat-form-field>
   <div class="buttons">
-    <button mat-raised-button color="primary" type="button"  (click)="onLogin()">
+    <button mat-raised-button color="primary" type="button" (click)="onLogin()">
       Login
     </button>
-    <button mat-button color="warn" type="button"  routerLink="/auth/request-password">
+    <button
+      mat-button
+      color="warn"
+      type="button"
+      routerLink="/auth/request-password"
+    >
       Esqueci minha senha
     </button>
   </div>
