--- a/src/app/pages/acl/list-acl/list-acl.component.html
+++ b/src/app/pages/acl/list-acl/list-acl.component.html
@@ -1,10 +1,8 @@
 <div class="bg-white p-5 shadow-md">
   <form [formGroup]="formSearch">
     <mat-form-field class="w-3/12 mr-2">
-      <input matInput placeholder="Pesquisar" formControlName="search_value" />
-      <mat-error>{{
-        formSearch.get('search_value')?.errors?.message
-      }}</mat-error>
+      <input matInput placeholder="Pesquisar" formControlName="filter" />
+      <mat-error>{{ formSearch.get('filter')?.errors?.message }}</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="onSearch()">
       Buscar
@@ -22,13 +20,12 @@
   <div class="table-container">
     <table
       mat-table
-      [dataSource]="filteredAndPagedIssues"
+      [dataSource]="filteredAndPagedAcls"
       class="mat-elevation-z8"
       matSort
-      matSortActive="name"
+      matSortActive="id"
       matSortDisableClear
       matSortDirection="desc"
-      (matSortChange)="resetPaging()"
     >
       <!-- Id Column -->
       <ng-container matColumnDef="id">
@@ -37,7 +34,7 @@
       </ng-container>
 
       <!-- Name Column -->
-      <ng-container matColumnDef="module">
+      <ng-container matColumnDef="module_id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
           Módulo
         </th>
@@ -45,7 +42,7 @@
       </ng-container>
 
       <!-- Cpf Column -->
-      <ng-container matColumnDef="role">
+      <ng-container matColumnDef="role_id">
         <th mat-header-cell *matHeaderCellDef>Função</th>
         <td mat-cell *matCellDef="let row">{{ row.role.description }}</td>
       </ng-container>
