Fix list and create

--- a/src/app/pages/acl/list-acl/list-acl.component.html
+++ b/src/app/pages/acl/list-acl/list-acl.component.html
@@ -54,7 +54,7 @@
           <button
             mat-raised-button
             color="primary"
-            routerLink="/users/register/1"
+            [routerLink]="'/acl/register/' + row.id"
           >
             Detalhes
           </button>
