--- a/src/app/pages/users/list-users/list-users.component.html
+++ b/src/app/pages/users/list-users/list-users.component.html
@@ -1,10 +1,8 @@
 <div class="bg-white p-5 shadow-md">
   <form [formGroup]="formSearch">
     <mat-form-field class="w-3/12 mr-2">
-      <input matInput placeholder="Pesquisar" formControlName="search_value" />
-      <mat-error
-        >{{ formSearch.get('search_value')?.errors?.message }}</mat-error
-      >
+      <input matInput placeholder="Pesquisar" formControlName="filter" />
+      <mat-error>{{ formSearch.get('filter')?.errors?.message }}</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="onSearch()">
       Buscar
@@ -22,13 +20,12 @@
   <div class="table-container">
     <table
       mat-table
-      [dataSource]="filteredAndPagedIssues"
+      [dataSource]="filteredAndPagedUsers"
       class="mat-elevation-z8"
       matSort
-      matSortActive="name"
+      matSortActive="id"
       matSortDisableClear
       matSortDirection="desc"
-      (matSortChange)="resetPaging()"
     >
       <!-- Id Column -->
       <ng-container matColumnDef="id">
@@ -44,16 +41,16 @@
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
+      <!-- Email Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+      </ng-container>
+
       <!-- Cpf Column -->
       <ng-container matColumnDef="cpf">
         <th mat-header-cell *matHeaderCellDef>Cpf</th>
         <td mat-cell *matCellDef="let row">{{ row.cpf }}</td>
-      </ng-container>
-
-      <!-- Email Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td class="max-w-sm" mat-cell *matCellDef="let row">{{ row.email }}</td>
       </ng-container>
 
       <!-- Actions Column -->
@@ -63,7 +60,7 @@
           <button
             mat-raised-button
             color="primary"
-            routerLink="/users/register/1"
+            [routerLink]="'/users/register/' + row.id"
           >
             Detalhes
           </button>
