--- a/src/app/@theme/layouts/one-column/one-column.layout.html
+++ b/src/app/@theme/layouts/one-column/one-column.layout.html
@@ -37,7 +37,7 @@
                 mat-list-item
                 routerLinkActive="is-active"
                 *ngFor="let submenu of menu.submenus.menus"
-                [routerLink]="submenu.router"
+                [routerLink]="menu.router + '/' + submenu.router"
               >
                 {{submenu.title}}
               </a>
