Fix addresses and contacts

--- a/src/app/pages/profile/addresses/addresses.component.html
+++ b/src/app/pages/profile/addresses/addresses.component.html
@@ -67,7 +67,7 @@
   <mat-card-actions
     *ngIf="i"
     matRaisedButton
-    (click)="removeContact(i)"
+    (click)="removeAddress(i)"
     class="text-right"
   >
     <button mat-button color="warn">Remover</button>
